[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statstools"
authors = [
    {name = "Riley Wilkinson", email = "j.riley.wilkinson@gmail.com"},
]
description = 'A package to aid in statistical analysis with statsmodels'
readme = "README.md"
requires-python = ">=3.7"
version = "0.0.2"
dependencies = [
    "asttokens",
    "colorama",
    "comm",
    "contourpy",
    "cycler",
    "debugpy",
    "decorator",
    "exceptiongroup",
    "executing",
    "fonttools",
    "importlib_metadata",
    "ipykernel",
    "ipython",
    "jedi",
    "jupyter_client",
    "jupyter_core",
    "kiwisolver",
    "matplotlib",
    "matplotlib-inline",
    "nest_asyncio",
    "numpy",
    "packaging",
    "pandas",
    "parso",
    "patsy",
    "pickleshare",
    "pillow",
    "platformdirs",
    "prompt-toolkit",
    "psutil",
    "pure-eval",
    "Pygments",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "pyzmq",
    "scipy",
    "seaborn",
    "setuptools",
    "six",
    "stack-data",
    "statsmodels",
    "tornado",
    "traitlets",
    "typing_extensions",
    "tzdata",
    "wcwidth",
    "wheel",
    "zipp",
    "regex"
]

[project.urls]
Homepage = "https://github.com/quintbro/stat-tools"
Repository = "https://github.com/quintbro/stat-tools"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
statstools = ["data/*.csv", "assets/*"]